remove bug